src/parse/parser.c
#include "../parse/parser.h"

Node *parse(char *data) {
    Tokens tokens = {0};
    tokens.line = 1;
    tokens.col = 0;
    tokens.data = data;
    tokens.size = strlen(data);
    return parse_program(&tokens);
}

Node *parse_program(Tokens *tokens) {
    Node *root = create_node(NODE_PROGRAM, "Root");
    Node *curr = parse_top_level_decl(tokens);
    while (curr) {
        append_child(root, curr);
        curr = parse_top_level_decl(tokens);
    }
    return root;
}

Node *parse_top_level_decl(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *curr = parse_func_decl(tokens);
    if (curr)
        return curr;
    parser_restore(tokens, cp);
    curr = parse_obj_decl(tokens);
    if (curr)
        return curr;
    parser_restore(tokens, cp);
    curr = parse_enum_decl(tokens);
    if (curr)
        return curr;
    parser_restore(tokens, cp);
    curr = parse_union_decl(tokens);
    if (curr)
        return curr;
    parser_restore(tokens, cp);
    curr = parse_const_decl(tokens);
    if (curr)
        return curr;
    parser_restore(tokens, cp);
    curr = parse_module_decl(tokens);
    if (curr)
        return curr;
    parser_restore(tokens, cp);
    curr = parse_import_decl(tokens);
    if (curr)
        return curr;
    parser_restore(tokens, cp);
    return NULL;
}

Node *parse_module_decl(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    if (!peek_keyword(tokens, "module")) {
        parser_restore(tokens, cp);
        return NULL;
    }
    consume_string(tokens, "module");
    Node *identifier = parse_identifier(tokens);
    if (!identifier) {
        parser_restore(tokens, cp);
        return NULL;
    }
    if (!consume_if(tokens, ';')) {
        destroy_node(identifier);
        parser_restore(tokens, cp);
        return NULL;
    }
    Node *curr = create_node_cp(NODE_MODULE_DECL, "", cp);
    append_child(curr, identifier);
    return curr;
}

Node *parse_import_decl(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    if (!peek_keyword(tokens, "import")) {
        parser_restore(tokens, cp);
        return NULL;
    }
    consume_string(tokens, "import");
    Node *identifier = parse_identifier(tokens);
    if (!identifier) {
        parser_restore(tokens, cp);
        return NULL;
    }
    Node *curr = create_node_cp(NODE_IMPORT_DECL, "", cp);
    append_child(curr, identifier);
    if (peek_keyword(tokens, "as")) {
        consume_string(tokens, "as");
        Node *alias = parse_identifier(tokens);
        if (alias) {
            append_child(curr, alias);
        }
    }
    if (!consume_if(tokens, ';')) {
        parser_restore(tokens, cp);
        destroy_node(curr);
        return NULL;
    }
    return curr;
}

Node *parse_visiblity(Tokens *tokens) {
    Node *curr = create_node(NODE_VISIBLITY, "");
    curr->data.visiblity = false;
    if (peek_keyword(tokens, "pub")) {
        consume_string(tokens, "pub");
        curr->data.visiblity = true;
    }
    return curr;
}

Node *parse_func_decl(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *visiblity = parse_visiblity(tokens);
    if (!peek_keyword(tokens, "fn")) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    consume_string(tokens, "fn");
    Node *identifier = parse_identifier(tokens);
    if (!identifier) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    if (!consume_if(tokens, '(')) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(identifier);
        return NULL;
    }
    Node *parameter_list = parse_parameter_list(tokens);
    if (!consume_if(tokens, ')')) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(identifier);
        destroy_node(parameter_list);
        return NULL;
    }
    Node *return_type = parse_return_type(tokens);
    if (!return_type) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(identifier);
        destroy_node(parameter_list);
        return NULL;
    }
    Node *block = parse_block(tokens);
    if (!block) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(identifier);
        destroy_node(parameter_list);
        destroy_node(return_type);
        return NULL;
    }
    Node *curr = create_node_cp(NODE_FUNC_DECL, "", cp);
    append_child(curr, visiblity);
    append_child(curr, identifier);
    append_child(curr, parameter_list);
    append_child(curr, return_type);
    append_child(curr, block);
    return curr;
}

Node *parse_parameter_list(Tokens *tokens) {
    Node *curr = create_node(NODE_PARAMETER_LIST, "");
    Node *node = parse_parameter(tokens);
    while (node) {
        append_child(curr, node);
        if (!consume_if(tokens, ','))
            break;
        node = parse_parameter(tokens);
    }
    return curr;
}

Node *parse_parameter(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *identifier = parse_identifier(tokens);
    if (!identifier) {
        return NULL;
    }
    if (!consume_if(tokens, ':')) {
        parser_restore(tokens, cp);
        destroy_node(identifier);
        return NULL;
    }
    Node *type = parse_type(tokens);
    if (!type) {
        parser_restore(tokens, cp);
        destroy_node(identifier);
        return NULL;
    }
    Node *curr = create_node_cp(NODE_PARAMETER, "", cp);
    append_child(curr, identifier);
    append_child(curr, type);
    return curr;
}

Node *parse_return_type(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    if (!peek_string(tokens, "->")) {
        return NULL;
    }
    consume_string(tokens, "->");
    Node *type = parse_type(tokens);
    if (!type) {
        parser_restore(tokens, cp);
        return NULL;
    }
    Node *curr = create_node_cp(NODE_RETURN_TYPE, "", cp);
    append_child(curr, type);
    return curr;
}

Node *parse_block(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    if (!consume_if(tokens, '{')) {
        return NULL;
    }
    Node *curr = create_node_cp(NODE_BLOCK, "", cp);
    Node *node = parse_statement(tokens);
    while (node) {
        append_child(curr, node);
        node = parse_statement(tokens);
    }
    if (!consume_if(tokens, '}')) {
        parser_restore(tokens, cp);
        destroy_node(curr);
        return NULL;
    }
    return curr;
}

Node *parse_type(Tokens *tokens) {
    Node *curr = parse_primitive_type(tokens);
    if (curr) {
        return curr;
    }
    curr = parse_pointer_type(tokens);
    if (curr) {
        return curr;
    }
    curr = parse_slice_type(tokens);
    if (curr) {
        return curr;
    }
    /* #TODO
     * Currently there is no check if an identifier is either and
     * obj, enum or union... in terms of types.
     * if we build a symbol table of sorts for theses declared types
     * at parse time all of these would have to be forward declared...
     * i dont like that. it can be remedied with a second pass when
     * we make the symbol table. so when we make the symbol table,
     * we will have to traverse the tree and change the types from
     * obj to either obj enum or union... this does mean that
     * parse_enum_type and parse_union_type are dead code...
     */
    curr = parse_obj_type(tokens);
    if (curr) {
        return curr;
    }
    curr = parse_enum_type(tokens);
    if (curr) {
        return curr;
    }
    curr = parse_union_type(tokens);
    if (curr) {
        return curr;
    }
    return NULL;
}

Node *parse_primitive_type(Tokens *tokens) {
    Node *curr = create_node(NODE_PRIMITIVE_TYPE, "");
    if (peek_keyword(tokens, "u8")) {
        consume_string(tokens, "u8");
        curr->data.primitive_type = u8;
        return curr;
    }
    if (peek_keyword(tokens, "u32")) {
        consume_string(tokens, "u32");
        curr->data.primitive_type = u32;
        return curr;
    }
    if (peek_keyword(tokens, "u64")) {
        consume_string(tokens, "u64");
        curr->data.primitive_type = u64;
        return curr;
    }
    if (peek_keyword(tokens, "i32")) {
        consume_string(tokens, "i32");
        curr->data.primitive_type = i32;
        return curr;
    }
    if (peek_keyword(tokens, "i64")) {
        consume_string(tokens, "i64");
        curr->data.primitive_type = i64;
        return curr;
    }
    if (peek_keyword(tokens, "f32")) {
        consume_string(tokens, "f32");
        curr->data.primitive_type = f32;
        return curr;
    }
    if (peek_keyword(tokens, "f64")) {
        consume_string(tokens, "f64");
        curr->data.primitive_type = f64;
        return curr;
    }
    if (peek_keyword(tokens, "bool")) {
        consume_string(tokens, "bool");
        curr->data.primitive_type = boolean;
        return curr;
    }
    if (peek_keyword(tokens, "void")) {
        consume_string(tokens, "void");
        curr->data.primitive_type = voidian;
        return curr;
    }
    if (peek_keyword(tokens, "usize")) {
        consume_string(tokens, "usize");
        curr->data.primitive_type = usize;
        return curr;
    }
    if (peek_keyword(tokens, "isize")) {
        consume_string(tokens, "isize");
        curr->data.primitive_type = isize;
        return curr;
    }
    destroy_node(curr);
    return NULL;
}

Node *parse_pointer_type(Tokens *tokens) {
    if (!consume_if(tokens, '*')) {
        return NULL;
    }
    Node *type = parse_type(tokens);
    if (!type) {
        return NULL;
    }
    Node *curr = create_node(NODE_POINTER_TYPE, "");
    append_child(curr, type);
    return curr;
}

Node *parse_slice_type(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    if (!consume_if(tokens, '[')) {
        parser_restore(tokens, cp);
        return NULL;
    }
    Node *integer = parse_integer_literal(tokens);

    if (!consume_if(tokens, ']')) {
        parser_restore(tokens, cp);
        destroy_node(integer);
        return NULL;
    }

    Node *type = parse_type(tokens);
    if (!type) {
        parser_restore(tokens, cp);
        destroy_node(integer);
        return NULL;
    }

    Node *curr = create_node_cp(NODE_SLICE_TYPE, "", cp);
    append_child(curr, type);
    append_child(curr, integer);
    return curr;
}

Node *parse_obj_type(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *identifier = parse_identifier(tokens);
    if (!identifier) {
        parser_restore(tokens, cp);
        return NULL;
    }
    identifier->type = NODE_OBJ_TYPE;
    return identifier;
}

Node *parse_enum_type(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *identifier = parse_identifier(tokens);
    if (!identifier) {
        parser_restore(tokens, cp);
        return NULL;
    }
    identifier->type = NODE_ENUM_TYPE;
    return identifier;
}

Node *parse_union_type(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *identifier = parse_identifier(tokens);
    if (!identifier) {
        parser_restore(tokens, cp);
        return NULL;
    }
    identifier->type = NODE_UNION_TYPE;
    return identifier;
}

Node *parse_obj_decl(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *visibility = parse_visiblity(tokens);
    if (!peek_keyword(tokens, "obj")) {
        parser_restore(tokens, cp);
        destroy_node(visibility);
        return NULL;
    }

    consume_string(tokens, "obj");
    Node *identifier = parse_identifier(tokens);
    if (!identifier) {
        parser_restore(tokens, cp);
        destroy_node(visibility);
        return NULL;
    }

    if (!consume_if(tokens, '{')) {
        parser_restore(tokens, cp);
        destroy_node(visibility);
        destroy_node(identifier);
        return NULL;
    }
    Node *curr = create_node_cp(NODE_OBJ_DECL, "", cp);
    append_child(curr, visibility);
    append_child(curr, identifier);
    Node *node = parse_obj_member(tokens);
    while (node) {
        append_child(curr, node);
        node = parse_obj_member(tokens);
    }
    if (!consume_if(tokens, '}')) {
        parser_restore(tokens, cp);
        destroy_node(visibility);
        destroy_node(identifier);
        destroy_node(curr);
        return NULL;
    }
    return curr;
}

Node *parse_obj_member(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *curr = parse_field_decl(tokens);
    if (curr)
        return curr;
    parser_restore(tokens, cp);
    curr = parse_method_decl(tokens);
    if (curr)
        return curr;
    parser_restore(tokens, cp);
    return NULL;
    //  constructors and destructors are not syntaxically different from
    //  methods, no distinction need now
    //	curr = parse_constructor_decl(tokens);
    //	if (curr)
    //		return curr;
    //	parser_restore(tokens, cp);
    //	curr = parse_destructor_decl(tokens);
    //	if (curr)
    //		return curr;
}

Node *parse_field_decl(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *visiblity = parse_visiblity(tokens);
    Node *var_decl = parse_var_decl(tokens);
    if (!var_decl) {
        destroy_node(visiblity);
        parser_restore(tokens, cp);
        return NULL;
    }
    if (!consume_if(tokens, ';')) {
        destroy_node(visiblity);
        parser_restore(tokens, cp);
        return NULL;
    }
    Node *curr = create_node_cp(NODE_FIELD_DECL, "", cp);
    append_child(curr, visiblity);
    append_child(curr, var_decl);
    return curr;
}

Node *parse_method_decl(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *visiblity = parse_visiblity(tokens);
    if (!peek_keyword(tokens, "fn")) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    consume_string(tokens, "fn");
    Node *identifier = parse_identifier(tokens);
    if (!identifier) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    if (!consume_if(tokens, '(')) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(identifier);
        return NULL;
    }
    Node *self_param = parse_self_param(tokens);
    Node *parameter_list = NULL;
    if (self_param) {
        if (consume_if(tokens, ',')) {
            parameter_list = parse_parameter_list(tokens);
            if (!parameter_list) {
                parser_restore(tokens, cp);
                destroy_node(visiblity);
                destroy_node(identifier);
                destroy_node(self_param);
                return NULL;
            }
        } else {
            parameter_list = parse_parameter_list(tokens);
        }
    } else {
        parameter_list = parse_parameter_list(tokens);
    }

    if (!consume_if(tokens, ')')) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(identifier);
        destroy_node(self_param);
        destroy_node(parameter_list);
        return NULL;
    }
    Node *return_type = parse_return_type(tokens);
    if (!return_type) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(identifier);
        destroy_node(self_param);
        destroy_node(parameter_list);
        return NULL;
    }
    Node *block = parse_block(tokens);
    if (!block) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(identifier);
        destroy_node(self_param);
        destroy_node(parameter_list);
        destroy_node(return_type);
        return NULL;
    }
    Node *curr = create_node_cp(NODE_METHOD_DECL, "", cp);
    append_child(curr, visiblity);
    append_child(curr, identifier);
    append_child(curr, self_param);
    append_child(curr, parameter_list);
    append_child(curr, return_type);
    append_child(curr, block);
    return curr;
}

Node *parse_self_param(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    if (!peek_keyword(tokens, "self")) {
        parser_restore(tokens, cp);
        return NULL;
    }
    consume_string(tokens, "self");
    if (!consume_if(tokens, ':')) {
        parser_restore(tokens, cp);
        return NULL;
    }
    if (!consume_if(tokens, '*')) {
        parser_restore(tokens, cp);
        return NULL;
    }
    Node *obj_type = parse_obj_type(tokens);
    if (!obj_type) {
        parser_restore(tokens, cp);
        return NULL;
    }
    Node *curr = create_node_cp(NODE_SELF_PARAM, "", cp);
    append_child(curr, obj_type);
    return curr;
}

Node *parse_constructor_decl(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *visiblity = parse_visiblity(tokens);
    if (!peek_keyword(tokens, "fn")) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    consume_string(tokens, "fn");
    if (!peek_keyword(tokens, "init")) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    consume_string(tokens, "init");
    if (!consume_if(tokens, '(')) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    Node *parameter_list = parse_parameter_list(tokens);

    if (!consume_if(tokens, ')')) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(parameter_list);
        return NULL;
    }
    parse_return_type(tokens);
    Node *block = parse_block(tokens);
    if (!block) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(parameter_list);
        return NULL;
    }
    Node *curr = create_node_cp(NODE_CONSTRUCTOR_DECL, "", cp);
    append_child(curr, visiblity);
    append_child(curr, parameter_list);
    append_child(curr, block);
    return curr;
}

Node *parse_destructor_decl(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *visiblity = parse_visiblity(tokens);
    if (!peek_keyword(tokens, "fn")) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    consume_string(tokens, "fn");
    if (!peek_keyword(tokens, "deinit")) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    consume_string(tokens, "deinit");
    if (!consume_if(tokens, '(')) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    Node *self_param = parse_self_param(tokens);

    if (!consume_if(tokens, ')')) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(self_param);
        return NULL;
    }

    parse_return_type(tokens);
    Node *block = parse_block(tokens);
    if (!block) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(self_param);
        return NULL;
    }
    Node *curr = create_node_cp(NODE_DESTRUCTOR_DECL, "", cp);
    append_child(curr, visiblity);
    append_child(curr, self_param);
    append_child(curr, block);
    return curr;
}

Node *parse_enum_decl(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *visiblity = parse_visiblity(tokens);
    if (!peek_keyword(tokens, "enum")) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    consume_string(tokens, "enum");
    Node *identifier = parse_identifier(tokens);
    if (!identifier) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    if (!consume_if(tokens, '{')) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(identifier);
        return NULL;
    }
    Node *curr = create_node_cp(NODE_ENUM_DECL, "", cp);
    Node *node = parse_enum_variant(tokens);
    append_child(curr, visiblity);
    append_child(curr, identifier);
    while (node) {
        append_child(curr, node);
        node = parse_enum_variant(tokens);
    }
    if (!consume_if(tokens, '}')) {
        parser_restore(tokens, cp);
        destroy_node(curr);
        return NULL;
    }
    return curr;
}

Node *parse_enum_variant(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *identifier = parse_identifier(tokens);
    if (!identifier) {
        parser_restore(tokens, cp);
        return NULL;
    }
    Node *integer = NULL;
    if (consume_if(tokens, '=')) {
        integer = parse_integer_literal(tokens);
        if (!integer) {
            parser_restore(tokens, cp);
            destroy_node(identifier);
            return NULL;
        }
    }
    consume_if(tokens, ',');
    Node *curr = create_node_cp(NODE_ENUM_VARIANT, "", cp);
    append_child(curr, identifier);
    append_child(curr, integer);
    return curr;
}

Node *parse_union_decl(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *visiblity = parse_visiblity(tokens);
    if (!peek_keyword(tokens, "union")) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    consume_string(tokens, "union");
    Node *identifier = parse_identifier(tokens);
    if (!identifier) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    if (!consume_if(tokens, '{')) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(identifier);
        return NULL;
    }
    Node *curr = create_node_cp(NODE_UNION_DECL, "", cp);
    Node *node = parse_union_variant(tokens);
    append_child(curr, visiblity);
    append_child(curr, identifier);
    while (node) {
        append_child(curr, node);
        node = parse_union_variant(tokens);
    }

    if (!consume_if(tokens, '}')) {
        parser_restore(tokens, cp);
        destroy_node(curr);
        return NULL;
    }
    return curr;
}

// union_variant = identifier ":" type [ "," ] ;
Node *parse_union_variant(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *identifier = parse_identifier(tokens);
    if (!identifier) {
        parser_restore(tokens, cp);
        return NULL;
    }
    if (!consume_if(tokens, ':')) {
        parser_restore(tokens, cp);
        destroy_node(identifier);
        return NULL;
    }
    Node *type = parse_type(tokens);
    if (!type) {
        parser_restore(tokens, cp);
        destroy_node(identifier);
        return NULL;
    }
    consume_if(tokens, ',');
    Node *curr = create_node_cp(NODE_UNION_VARIANT, "", cp);
    append_child(curr, identifier);
    append_child(curr, type);
    return curr;
}

Node *parse_const_decl(Tokens *tokens) {
    skip_whitespace(tokens);
    ParserCheckpoint cp = parser_save(tokens);
    Node *visiblity = parse_visiblity(tokens);
    if (!peek_keyword(tokens, "const")) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    consume_string(tokens, "const");
    Node *identifier = parse_identifier(tokens);
    if (!identifier) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        return NULL;
    }
    if (!consume_if(tokens, ':')) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(identifier);
        return NULL;
    }
    Node *type = parse_type(tokens);
    if (!type) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(identifier);
        return NULL;
    }
    if (!consume_if(tokens, '=')) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(identifier);
        destroy_node(type);
        return NULL;
    }
    Node *expression = parse_expression(tokens);
    if (!expression) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(identifier);
        destroy_node(type);
        return NULL;
    }
    if (!consume_if(tokens, ';')) {
        parser_restore(tokens, cp);
        destroy_node(visiblity);
        destroy_node(identifier);
        destroy_node(type);
        destroy_node(expression);
        return NULL;
    }
    Node *curr = create_node_cp(NODE_CONST_DECL, "", cp);
    append_child(curr, visiblity);
    append_child(curr, identifier);
    append_child(curr, type);
    append_child(curr, expression);
    return curr;
}
